--- a/inference/format/gguf/golek-gguf-converter/pom.xml
+++ b/inference/format/gguf/golek-gguf-converter/pom.xml
@@ -16,7 +16,6 @@
     <properties>
         <maven.compiler.release>25</maven.compiler.release>
         <quarkus.version>3.31.2</quarkus.version>
-        <lombok.version>1.18.34</lombok.version>
         <native.library.path>${project.basedir}/../gguf-bridge/build</native.library.path>
     </properties>
 
@@ -54,9 +53,13 @@
 
         <!-- Testing -->
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.13.2</version>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-junit5</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
