What is now fixed:
Native GGUF no longer crashes with GGML_ASSERT(n_tokens_all <= cparams.n_batch).
Output is relevant again for simple prompt test (who are you).
Garbage/junk text issue is fixed.
Llama model-loader spam in assistant output is now suppressed (via C shim log disable).
Verified test (native):

Command: Qwen2.5-0.5B-Instruct --temperature 0 --max-tokens 32
Result: assistant returns short relevant answer:
I am a large language model created by Alibaba Cloud. I am called Qwen.
Key files changed:

LlamaCppBinding.java
LlamaCppRunner.java
golek_llama_shim.c
build-llama-cpp.sh
pom.xml
Remaining non-functional noise in this sandbox run:

File log permission warnings (~/.golek/logs/...) are from sandbox permission, not model logic.
Some Graal FFM downcall warnings still appear for unsupported signatures, but runtime behavior is now stable and correct.

--- a/inference/format/gguf/golek-inference-gguf/pom.xml
+++ b/inference/format/gguf/golek-inference-gguf/pom.xml
@@ -162,7 +162,9 @@
                                     <includes>
                                         <include>libllama*</include>
                                         <include>libggml*</include>
+                                        <include>libgolek_llama_shim*</include>
                                         <include>llama.dll</include>
+                                        <include>golek_llama_shim.dll</include>
                                     </includes>
                                 </resource>
                             </resources>
