--- a/extension/kernel/tflite/gollek-ext-format-tflite/pom.xml
+++ b/extension/kernel/tflite/gollek-ext-format-tflite/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>tech.kayys.gollek</groupId>
-        <artifactId>gollek-provider-parent</artifactId>
+        <artifactId>gollek-tflite-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
