--- a/extension/kernel/tflite/pom.xml
+++ b/extension/kernel/tflite/pom.xml
@@ -5,28 +5,21 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>tech.kayys.gollek</groupId>
-        <artifactId>gollek-ext-parent</artifactId>
+        <artifactId>gollek-kernel-parent</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>gollek-kernel-parent</artifactId>
+    <artifactId>gollek-tflite-parent</artifactId>
     <packaging>pom</packaging>
 
-    <name>Gollek Format parent</name>
-    <description>Gollek Extension based on Model Format</description>
-
+    <name>Gollek LiteRT (TfLite) Parent</name>
+    <description>Gollek LiteRT (TfLite) Parent</description>
 
     <properties>
         <maven.compiler.source>25</maven.compiler.source>
         <maven.compiler.target>25</maven.compiler.target>
     </properties>
     <modules>
-        <module>djl</module>
-        <module>gguf</module>
-        <module>libtorch</module>
-        <module>paged-attention</module>
-        <module>tflite</module>
-        <!-- <module>transformers/gollek-ext-format-transformers</module>
-         -->
+        <module>gollek-ext-format-tflite</module>
     </modules>
 </project>
